Fix scrollbar shift

--- a/themes/anubis/assets/css/main.css
+++ b/themes/anubis/assets/css/main.css
@@ -469,6 +469,13 @@ ul.language-select > li, ul.footer-menu > li {
 
 /* Media Queries */
 
+@media screen and (min-width: 960px) {
+    html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
+}
+
 @media (max-width: 840px) {
     .main-wrapper {
         margin: 0;
